# redun-cert-experiments

./: .gitignore  .gitmodules  pyproject.toml
scripts/: analytic_center.py  conversion.py  generate_hardcoded_sdp_cases.py  max_clique_analysis.py  max_clique_analysis_assoc_sweep.py  max_clique_preconditioner_analysis.py  mw_loc_init_and_certify.py
src/examples/mat_weight_loc/: stereo_cert.py
src/examples/utils/: keypoint_tools.py
src/mat_weight_loc/: gtsam_factors.py  lieopt_pose_est.py  stereo_cert.py  stereo_loc.py  stereo_loc_factor_graph.py
src/max_clique/: max_clique.py
src/utils/: keypoint_tools.py  stereo_utils.py
tests/: test_stereo_localization_problem.py
